# pico-guitar-midi-tracker

./: .gitignore  CMakeLists.txt  README.md  boot.py  code.py  requirements.txt
circuitpython/tests/: midi.py
hardware/: fp-lib-table  pico-guitar-midi-tracker.kicad_prl  pico-guitar-midi-tracker.kicad_pro  pico-guitar-midi-tracker.kicad_sch
src/: config.h  global.h  main.cpp  math.h  midi.cpp  midi.hpp  tracker.cpp  tracker.hpp  tracker_fft.cpp  tracker_fft.hpp  tracker_schmitt.cpp  tracker_schmitt.hpp
src/tests/: midi.cpp
tests/: analogin.py  chromagram.py  midi.py  spectrogram.py
